--- a/person.show.html
+++ b/person.show.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>うずまきナルト</title>
+    <title>けんけん</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <script src="top.js"></script>
@@ -19,7 +19,7 @@
             <li><a href="movie.html">動画</a></li>            
             <li><a href="login.html">ログアウト</a></li>
         </ul>
-        <h1>うずまきナルト</h1>        
+        <h1>けんけん</h1>        
     </div>
 　　</div>
     </header>
